--- a/.github/workflows/Context.yml
+++ b/.github/workflows/Context.yml
@@ -22,3 +22,4 @@ jobs:
           echo 'Run details ${{github.run_id}}'
           echo 'Runner number details ${{github.run_number}}'
           echo 'Env value is ${{env.MY_VAR}}'
+          echo 'Global env value is ${{vars.MY_VAR}}'
