--- a/.github/workflows/Setup Node.yml
+++ b/.github/workflows/Setup Node.yml
@@ -4,9 +4,13 @@ on:
 
 jobs:
   setup-node:
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [22, 23, 26]
     runs-on: ubuntu-latest
     steps:
        - name: Setup Node.js environment
          uses: actions/setup-node@v3.9.1
          with:
-           node-version: '22'
+           node-version: ${{matrix.node-version}}
