--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -14,4 +14,4 @@ on:
       runs-on: ubuntu-latest
       steps:
         - run: echo "Running in ${{inputs.environment}}
-        - run: echo "Secret is ${{secret.MY_SECRET}}
+        - run: echo "Secret is ${{secrets.MY_SECRET}}
