--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -4,14 +4,14 @@ on:
   workflow_call:
     inputs:
       environment:
-        required: true
-        type: string
+      required: true
+      type: string
     secrets:
       MY_SECRET:
         required: true
-jobs:
-  echo-hello:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "Running in ${{inputs.environment}}
-      - run: echo "Secret is ${{secrets.MY_SECRET}}
+  jobs:
+    echo-hello:
+      runs-on: ubuntu-latest
+      steps:
+        - run: echo "Run in ${{inputs.environment}}"
+        - run: echo "Secret is ${{secrets.MY_SECRET}}"
